--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,17 @@
+<h1>Create a Team and Heroes!</h1>
 
+<form method="post" action="/teams" >
+
+Team Name: <input id="team[name]" type="text" name="team[name]">
+Team Motto: <input id="team[motto]" type="text" name="team[motto]">
+Team Member 1: <input id="member1_name" type="text" name="team[member_1][name]">
+Team Member 1: <input id="member1_power" type="text" name="team[member_1][power]">
+Team Member 1: <input id="member1_bio" type="text" name="team[member_1][bio]">
+Team Member 2: <input id="member2_name" type="text" name="team[member_2][name]">
+Hero Power: <input id="member2_power" type="text" name="team[member_2][power]">
+Team Member 2: <input id="member2_bio" type="text" name="team[member_2][bio]">
+Team Member 3: <input id="member3_name" type="text" name="team[member_3][name]">
+Team Member 3: <input id="member3_power" type="text" name="team[member_3][power]">
+Team Member 3: <input id="member3_bio" type="text" name="team[member_3][bio]">
+<button id="team" type="submit" value="submit">Submit</button>
+</form>
