--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,15 @@
+<h1>Display your Pirate here</h1>
 
+<p>Team Name: <%= @team[:name] %></p>
+<p>Team Motto: <%= @team[:motto] %></p>
+<p>Hero Name: <%= @team[:member_1][:name] %></p>
+<p>Hero Power: <%= @team[:member_1][:power] %></p>
+<p>Hero Biography: <%= @team[:member_1][:bio]%></p>
+<p>Hero Name: <%= @team[:member_2][:name] %></p>
+<p>Hero Power: <%= @team[:member_2][:power] %></p>
+<p>Hero Biography: <%= @team[:member_2][:bio]%></p>
+<p>Hero Name: <%= @team[:member_3][:name] %></p>
+<p>Hero Power: <%= @team[:member_3][:power] %></p>
+<p>Hero Biography: <%= @team[:member_3][:bio]%></p>
 
 
